2006-02-18	ujwal

	* Acquiring screenLock in VT100Screen when resizing.
	* Reduced idle CPU usage by about 90% by using a semaphore to signal data processing thread.

2006-02-17	ujwal
	
	* Rolled back some of the NSConnection code since tabview was having redraw problems when a tab was closed.
	* Some code cleanup.
	* Moved iTermNumberOfSessionsDidChange notification from closeSession to tabViewDidChangeNumberOfTabViewItems.
	* Fixed deadlock between VT100Terminal and PTYTextView.

2006-02-14  fabian

    * Bug fixes for crashes when sessions are closed.
    
2006-02-13  fabian

    * Removed NSConnection from PTYTask all together
    
2006-02-12	ujwal
	* Fixed memory leak in PTYTask.
	* Moved event handlers for NSMouseEntered and NSMouseExited to PTYWindow.
	* Using separate thread in PTYSession to process data read from file descriptor in PTYTask. When data is read, the 
	  PTYTask instance justs appends data to the STREAM in VT100Terminal. The separate thread in PTYSession now reads 
	  the STREAM and processes data.

2006-02-06  fabian

    * Updated website files for the new release.

2006-02-06	dnedrow

	* Set default terminal type to ANSI rather than VT100. This should
	  reduce the numerous support message re: "lack of color" support
          in the shell (eg. ls -G).

2006-02-05	dnedrow

	* Updated NIB PreferencePanels to reflect Rendezvous->Bonjour namechange.
	* Fixes for mismatched signedness warnings in PTYSession.m.
	* Corrected an XCODE 2.2 warning re: boolean assignment used for while()
	  in iTermApplicationDelegate.m.
	* Disabled prebinding in default XCode project to clear linker warnings
	  when compiling for UB targets. Can be enabled as needed for 10.2 or 
	  10.3 builds.

2006-02-05	ujwal

	* Fixed outlet bug in German NIB that caused drawer not to open.
	* Removed unnecessary code in iTermApplication.m 

2006-02-03  fabian

    * Fixed bugs in [VT100Screen InsertLines&DeleteLines] (#1180993), as suggested by
      A'rpi (arpi@mplayerhq.hu)